--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.4"
+    "angular": "1.4",
+    "chai": "~3.3.0",
+    "mocha": "~2.3.2"
   }
 }
