--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.9.3",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "karma": "^0.13.9",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "mocha": "^2.3.2",
+    "phantomjs": "^1.9.18"
+  },
+  "devDependencies": {
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1"
   }
 }
