--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js--np-tdd",
+  "name": "js--ng-tdd",
   "version": "0.0.0",
   "description": "Introduction into Angular TDD",
   "main": "index.js",
