Initial setup for express backend

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.9.3",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-live-server": "0.0.28",
     "karma": "^0.13.9",
     "karma-phantomjs-launcher": "^0.2.1",
     "mocha": "^2.3.2",
