--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "1.4",
+    "angular-mocks": "~1.4.6",
     "chai": "~3.3.0",
     "mocha": "~2.3.2"
   }
