--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.9.3",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-live-server": "0.0.28",
