--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-live-server": "0.0.28",
+    "gulp-protractor": "^1.0.0",
     "istanbul": "^0.3.20",
     "karma": "^0.13.9",
     "karma-coverage": "^0.5.2",
